# bounded-integer

./: .gitmodules  .hgignore  .hgsub  .hgsubstate  CMakeLists.txt  LICENSE_1_0.txt  SConstruct  bounded-readme.md  containers-readme.md  list_of_sources.py  readme.md  sources.py
bounded_integer/: array.cpp  (+7 more)
source/bounded/: CMakeLists.txt  abs.cpp  add_common_cv_reference.cpp  assert-NDEBUG-BOUNDED_NEVER_ASSUME_ASSERTS.cpp  assert-NDEBUG.cpp  assert.cpp  assert_assume_helpers.cpp  assume.cpp  assume_in_range.cpp  bounded.cpp  bounded_by_range.cpp  bounded_integer.cpp  builtin_integer.cpp  builtin_min_max_value.cpp  cast.cpp  character.cpp  check_in_range.cpp  checked_bit_cast.cpp  clamp.cpp  common_type_and_value_category.cpp  comparison.cpp  comparison_builtin.cpp  comparison_function_object.cpp  concepts.cpp  conditional_function.cpp  constexpr_only_if.cpp  construct.cpp  construct_at.cpp  construct_destroy.cpp  copy.cpp  copy_cv_ref.cpp  declval.cpp  destroy.cpp  equality_comparable.cpp  format.cpp  function_ptr.cpp  hash.cpp  homogeneous_equals.cpp  homogeneous_equals.hpp  identity.cpp  (+51 more)
source/bounded/arithmetic/: base.cpp  bitwise_and.cpp  byte.cpp  divides.cpp  extreme_values.cpp  increment_decrement.cpp  left_shift.cpp  min_max.cpp  modulus.cpp  multiplies.cpp  operators.cpp  operators_builtin.cpp  plus.cpp  pointer.cpp  right_shift.cpp  round_up_divide.cpp  safe_abs.cpp  unary_minus.cpp  unary_plus.cpp
source/bounded/arithmetic/test/: CMakeLists.txt  pointer.cpp
source/bounded/detail/: abs.cpp  addressof.cpp  assert-NDEBUG-BOUNDED_NEVER_ASSUME_ASSERTS.cpp  assert-NDEBUG.cpp  assert.cpp  assume.cpp  basic_numeric_limits.cpp  builtin_min_max_value.cpp  cast.cpp  class.cpp  common_type.cpp  common_type_and_value_category.cpp  comparison.cpp  comparison_builtin.cpp  comparison_function_object.cpp  comparison_mixed.cpp  conditional.cpp  construct_destroy.cpp  copy_cv_ref.cpp  forward_declaration.cpp  hash.cpp  int128.cpp  integer_range.cpp  integer_tombstone_traits.cpp  is_bounded_integer.cpp  is_poisoned.cpp  literal.cpp  log.cpp  make.cpp  make_index_sequence.cpp  max_builtin.cpp  min_max_value.cpp  minmax.cpp  modulo_cast.cpp  noexcept.cpp  normalize.cpp  numeric_limits.cpp  overlapping_range.cpp  overload.cpp  pow.cpp  (+12 more)
source/bounded/detail/arithmetic/: base.cpp  bitwise_and.cpp  byte.cpp  common.cpp  compound_assignment.cpp  divides.cpp  extreme_values.hpp  left_shift.cpp  minus.cpp  modulus.cpp  multiplies.cpp  operators.cpp  operators_builtin.cpp  plus.cpp  pointer.cpp  right_shift.cpp  safe_abs.cpp  unary_minus.cpp  unary_plus.cpp
source/bounded/detail/optional/: common_type.cpp  comparison_operators.cpp  forward_declaration.cpp  optional.cpp  value_or.cpp
source/bounded/detail/policy/: all.cpp  clamp_policy.cpp  common_policy.cpp  modulo_policy.cpp  null_policy.cpp  throw_policy.cpp
source/bounded/test/: check_in_range.cpp  format.cpp  stream.cpp  to_integer.cpp  tombstone.cpp  tombstone_traits.cpp
source/containers/: CMakeLists.txt  adapt.cpp  adapt_iterator.cpp  add_remove_const.cpp  addable.cpp  addable_subtractable.cpp  allocator.cpp  append.cpp  append_after.cpp  append_into_capacity.cpp  append_test.cpp  appendable_from_capacity.cpp  array.cpp  array_test.cpp  as_bytes.cpp  as_mutable_ptr.cpp  assign.cpp  assign_test.cpp  assign_to_empty.cpp  assign_to_empty_into_capacity.cpp  assign_to_empty_test.cpp  associative_container.cpp  at.cpp  back.cpp  batched.cpp  begin_end.cpp  bidirectional_iterator.cpp  bidirectional_linked_list.cpp  bidirectional_range.cpp  bounded_vector.cpp  c_array.cpp  can_set_size.cpp  clear.cpp  clear_test.cpp  common_container_functions.cpp  common_functions.cpp  common_iterator_functions.cpp  compare_adl.cpp  compare_container.cpp  constant_time_erasable.cpp  (+157 more)
source/containers/algorithms/: accumulate.cpp  adjacent.cpp  advance.cpp  all_any_none.cpp  binary_search.cpp  chunk_by.cpp  common_prefix.cpp  compare.cpp  concatenate.cpp  concatenate_view.cpp  copy.cpp  copy_n.cpp  copy_or_relocate_from.cpp  copy_or_relocate_from_test.cpp  count.cpp  destroy_range.cpp  distance.cpp  double_buffered_ska_sort.cpp  drop.cpp  drop_back.cpp  ends_with.cpp  erase.cpp  erase_test.cpp  filter.cpp  filter_iterator.cpp  find.cpp  generate.cpp  generate_until.cpp  inplace_radix_sort.cpp  is_sorted.cpp  join.cpp  join_with.cpp  keyed_binary_search.cpp  keyed_erase.cpp  keyed_insert.cpp  maybe_find.cpp  minmax_element.cpp  mismatch.cpp  move_iterator.cpp  move_range.cpp  (+21 more)
source/containers/array/: array.cpp  make_array.cpp
source/containers/dynamic_array/: dynamic_array.cpp
source/containers/flat_map/: flat_map.cpp
source/containers/static_vector/: make_static_vector.cpp  static_vector.cpp
source/containers/std/: inplace_vector.cpp  list.cpp  std_allocator.cpp  vector.cpp  vector_benchmark.cpp
source/containers/test/: array.cpp  as_bytes.cpp  associative_container.cpp  at.cpp  back.cpp  bidirectional_linked_list.cpp  dynamic_array.cpp  flat_map.cpp  forward_linked_list.cpp  front.cpp  insert.cpp  is_container.cpp  lazy_push_back.cpp  lazy_push_front.cpp  legacy_range.cpp  lookup.cpp  map_benchmark.cpp  ordered_associative_container.cpp  pop_back.cpp  push_front.cpp  range_view.cpp  resize.cpp  sbo_vector.cpp  shrink_to_fit.cpp  small_buffer_optimized_vector.cpp  span.cpp  stable_vector.cpp  static_vector.cpp  string.cpp  subrange.cpp  take.cpp  test_associative_container.cpp  test_reserve_and_capacity.cpp  test_sequence_container.cpp  test_set_size.cpp  to_array.cpp  trivial_inplace_function.cpp  vector.cpp  vector_benchmark.cpp  wrap_range.cpp
source/containers/variant/: variant.cpp
source/containers/vector/: vector.cpp
source/tv/: CMakeLists.txt  apply.cpp  get_index.cpp  indexed_value.cpp  insert.cpp  is_valid_index.cpp  none.cpp  nth_type.cpp  optional.cpp  overload.cpp  single_element_storage.cpp  transform.cpp  tuple.cpp  tuple_cat.cpp  tuple_size.cpp  tv.cpp  variadic_union.cpp  variant.cpp  variant_index.cpp  visit.cpp
source/tv/test/: optional.cpp  transform.cpp  tuple_cat.cpp  tuple_size.cpp  variant.cpp  visit.cpp
(+797 files in other folders)
